force-app/main/default/objects/Client__c/fields/AccountNumberPlusClientNumber__c.field-meta.xml
<CustomField>
    <fullName>AccountNumberPlusClientNumber__c</fullName>
    <description>Concatenation of Legal_Advisor__c and Client_Number__c for soql searches that needs to find specific clients</description>
    <formula>Legal_Advisor__r.Account_Number__c  &amp;  Client_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AccountNumberPlusClientNumber</label>
    <type>Text</type>
</CustomField>