force-app/main/default/objects/Client__c/fields/Client_Key__c.field-meta.xml
<CustomField>
    <fullName>Client_Key__c</fullName>
    <description>This field is the concatenation of Legal_Advisor__c.Account_Number__c and Client.Client_Number__c</description>
    <externalId>true</externalId>
    <label>Client Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>