force-app/main/default/objects/Client__c/fields/Created_by_Admin__c.field-meta.xml
<CustomField>
    <fullName>Created_by_Admin__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if the client record was created by an administrator. This checkbox helps identify records initiated by system administrators for reference and tracking purposes. Enabling this checkbox will prevent the record from being deleted by the nightly service.</inlineHelpText>
    <label>Created by Admin</label>
    <type>Checkbox</type>
</CustomField>