force-app/main/default/objects/Client__c/fields/Legal_Advisor__c.field-meta.xml
<CustomField>
    <fullName>Legal_Advisor__c</fullName>
    <label>Legal Advisor</label>
    <referenceTo>Legal_Advisor__c</referenceTo>
    <relationshipLabel>Clients</relationshipLabel>
    <relationshipName>Clients</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>